--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^1.5.5",
     "framer-motion": "^7.6.7",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
